src/objects/Break_Fix__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>This is a Break Fix Knowledge article type.</description>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <inlineHelpText>Include additional information such as KB articles, references to the original documentation (e.g. Admin Guide or Installation Guide) or any other resource that helped in documenting this article.</inlineHelpText>
        <label>Additional Information</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This specified the Approval Status.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Submitted for Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_created_from_Case__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Article created from Case #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Group_Name__c</fullName>
        <formula>CASE( Product__c ,
&quot;Datometry Hyper-Q for Pivotal Data Suite&quot; , &quot;Greenplum&quot;,
&quot;Datometry Workload Manager&quot; , &quot;Greenplum&quot;,
&quot;MADlib&quot; , &quot;Greenplum&quot;,
&quot;Alpine Chorus for Pivotal Data Suite&quot; , &quot;Greenplum&quot;,
&quot;Pivotal Command Center&quot; , &quot;Greenplum&quot;,
&quot;Pivotal Data Dispatch&quot; , &quot;Greenplum&quot;,
&quot;Pivotal GPText&quot; , &quot;Greenplum&quot;,
&quot;Pivotal Greenplum&quot; , &quot;Greenplum&quot;,
&quot;Pivotal Greenplum Command Center&quot; , &quot;Greenplum&quot;,
&quot;Pivotal GemFire&quot;,&quot;GemFire&quot;,
&quot;Pivotal GemFire XD&quot;,&quot;GemFire&quot;,
&quot;CSR&quot;,&quot;General CSR&quot;,
&quot;Other&quot;,&quot;General CSR&quot;,
&quot;Open Source Apache HTTP Server&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Open Source Apache Tomcat&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Open Source RabbitMQ&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Open Source Redis&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Pivotal Cloud Cache&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Pivotal Cloud Foundry Operations Manager&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Pivotal Cloud Foundry Operations Manager v2&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Pivotal Cloud Foundry Elastic Runtime Suite&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Pivotal RabbitMQ&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Pivotal tc Server&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Pivotal Tracker Enterprise SaaS&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Pivotal Tracker for Pivotal Cloud Foundry&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Pivotal Web Server&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Pivotal Web Services&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Spring IO&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;,
&quot;Pivotal HD&quot;,&quot;Pivotal HD&quot;,
&quot;Pivotal HDB&quot;,&quot;Pivotal HD&quot;,
&quot;Pivotal HDP&quot;,&quot;Pivotal HD&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <formula>AssignedToId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <inlineHelpText>Include a description of what caused the problem. If the RCA is applicable, write the description.</inlineHelpText>
        <label>Cause</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Component</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <description>This field is used to store the submitters email address in approval process
This is not used in page layout</description>
        <label>Initial Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Url__c</fullName>
        <label>Legacy Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Type notes for Pivotal Internal only</inlineHelpText>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <inlineHelpText>Describe which product(s) the article addresses.</inlineHelpText>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_KB_Article__c</fullName>
        <description>URL for a Related KB Article</description>
        <label>Related KB Article</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <inlineHelpText>Please describe the resolution of the problem.</inlineHelpText>
        <label>Resolution</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <inlineHelpText>Include the section that you would like your article to be published in.</inlineHelpText>
        <label>Section</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Component__c</fullName>
        <label>Sub Component</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Component__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Component</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Symptom__c</fullName>
        <inlineHelpText>Include a description of the symptoms or problem statement. If applicable, copy and paste the error message.</inlineHelpText>
        <label>Symptom</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Version</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk_Legacy_ID__c</fullName>
        <description>Legacy ID field for Data Migration</description>
        <label>Zendesk Legacy ID</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <label>Break Fix</label>
    <pluralLabel>Break Fixes</pluralLabel>
    <validationRules>
        <fullName>Field_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR((LEN( Symptom__c)=0),(LEN(Resolution__c)=0), ISBLANK( TEXT( Product__c ) ) )</errorConditionFormula>
        <errorMessage>Product, Symptom and Resolution are required.</errorMessage>
    </validationRules>
</CustomObject>